--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.62.1",
+    "swiper": "^9.3.2",
     "typescript": "5.0.4"
   }
 }
