--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
