--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
+    "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
