--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-pagination-control": "^1.0.5",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-redux": "^8.0.5",
