--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mdb-react-ui-kit": "^6.1.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
