--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
@@ -39,6 +40,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5"
+    "@types/node": "^20.2.5",
+    "@types/react-scroll": "^1.8.7"
   }
 }
