--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "exam",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.3",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "bootstrap": "^5.2.3",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "mdb-react-ui-kit": "^6.1.0",
-    "next": "13.4.3",
-    "rc-slider": "^10.2.0",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.7.4",
-    "react-bootstrap-pagination-control": "^1.0.5",
-    "react-compound-slider": "^3.4.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.2",
-    "react-hot-toast": "^2.4.1",
-    "react-paginate": "^8.2.0",
-    "react-redux": "^8.0.5",
-    "react-scroll": "^1.8.9",
-    "react-toastify": "^9.1.3",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.62.1",
-    "swiper": "^9.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@types/react-scroll": "^1.8.7"
-  }
+    "name": "exam",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@heroicons/react": "^2.0.18",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.13.3",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "18.2.4",
+        "bootstrap": "^5.2.3",
+        "eslint": "8.41.0",
+        "eslint-config-next": "13.4.3",
+        "mdb-react-ui-kit": "^6.1.0",
+        "next": "^13.5.7",
+        "rc-slider": "^10.2.0",
+        "react": "18.2.0",
+        "react-bootstrap": "^2.7.4",
+        "react-bootstrap-pagination-control": "^1.0.5",
+        "react-compound-slider": "^3.4.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.44.2",
+        "react-hot-toast": "^2.4.1",
+        "react-paginate": "^8.2.0",
+        "react-redux": "^8.0.5",
+        "react-scroll": "^1.8.9",
+        "react-toastify": "^9.1.3",
+        "redux-persist": "^6.0.0",
+        "sass": "^1.62.1",
+        "swiper": "^9.3.2",
+        "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "@types/node": "^20.2.5",
+        "@types/react-scroll": "^1.8.7",
+        "gh-pages": "^6.2.0"
+    }
 }
